start of upgrading to java 21