@@ -1,38 +1,30 @@
 # Base image 
-FROM centos:7
-MAINTAINER Frankie Parks <frankie.parks@bioappdev.org>
+FROM eclipse-temurin:21-jre
+LABEL maintainer="Frankie Parks <frankie.parks@bioappdev.org>"
 
 ENV TZ=America/New_York
 RUN ln -snf "/usr/share/zoneinfo/$TZ" /etc/localtime && echo "$TZ" > /etc/timezone
 
-# Update all packages installed for security
-RUN yum makecache && yum update -y
+# Update all packages installed for security and install unzip
+RUN apt-get update && apt-get install -y unzip && rm -rf /var/lib/apt/lists/*
 
 # Create a user and group used to launch processes
-# The user ID 1000 is the default for the first "regular" user on Fedora/RHEL,
-# so there is a high chance that this ID will be equal to the current user
-# making it easier to use volumes (no permission issues)
 RUN groupadd -r evsapi -g 1000 && useradd -u 1000 -r -g evsapi -m -d /opt/evsapi -s /sbin/nologin -c "EVSAPI user" evsapi && \
     chmod 755 /opt/evsapi
 
 # Set the working directory to evsapi' user home directory
 WORKDIR /opt/evsapi
 
-# Install necessary packages
-RUN yum -y install java-1.8.0-openjdk-devel unzip && yum clean all
-
 # Set ENV variable for EVS_SERVER_PORT
 ENV EVS_SERVER_PORT="5830"
-ENV JAVA_OPTIONS="-Xmx2048m -XX:PermSize=1024m -XX:MaxPermSize=512m"
+ENV JAVA_OPTIONS="-Xmx2048m"
 
 # Add file files to image
-ADD build/distributions/evsrestapi-1.0.0-SNAPSHOT.zip /opt/evsapi/
-RUN unzip evsrestapi-1.0.0-SNAPSHOT.zip
-RUN ln -s evsrestapi-1.0.0-SNAPSHOT evsrestapi
-
-RUN ls -l
+ADD build/distributions/evsrestapi-*.zip /opt/evsapi/
+RUN unzip evsrestapi-*.zip && rm evsrestapi-*.zip
+RUN ln -s evsrestapi-* evsrestapi
 
 EXPOSE 5830 
 USER evsapi
-CMD java -jar ./evsrestapi/lib/evsrestapi.war 
+CMD java $JAVA_OPTIONS -jar ./evsrestapi/lib/evsrestapi.war 
 
